accounts pagination, online player admin mapping, cors config, total count and much more, is leader validation on kick
